# movie-recommender-system-mlops-end-to-end

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
api/: main.py  schemas.py  services.py
frontend/: app.py
notebooks/: 01_EDA.ipynb  02_preprocess.ipynb  03_train_model.ipynb
reports/: evaluation_report.json
src/data/: loader.py
src/features/: __init__.py
src/models/: __init__.py  evaluate.py  predict.py  train.py
src/utils/: logger.py
tests/: test_api.py  test_data.py  test_model.py  test_smoke.py
