[project]
name = "movie-recommendation-system-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.0",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=2.14.0",
    "numpy>=2.4.3",
    "pandas<3",
    "protobuf>=3.20.0,<4.0.0",
    "psutil>=7.2.2",
    "pytest>=9.0.3",
    "reload>=0.9",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "uvicorn>=0.42.0",
]
